--- a/ppmtool/src/main/resources/application.properties
+++ b/ppmtool/src/main/resources/application.properties
@@ -11,3 +11,10 @@ spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate-dialect = org.hibernate.dialect.MySQL57Dialect
 spring.jpa.hibernate.ddl-auto=update
 
+#logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type=TRACE
+
+#superheroes.errors.controlleradvice = false
+#superheroes.errors.attributes = false
+#superheroes.errors.controller = false
+
