--- a/ppmtool/src/main/resources/application.properties
+++ b/ppmtool/src/main/resources/application.properties
@@ -4,12 +4,13 @@ spring.datasource.url = jdbc:mysql://localhost:3306/pptm
 spring.datasource.username=root
 spring.datasource.password=root
 
-spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.jpa.open-in-view=false
 
-spring.jpa.properties.hibernate-dialect = org.hibernate.dialect.MySQL57Dialect
+spring.jpa.properties.hibernate-dialect = org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 #logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type=TRACE
